<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/azul_obscuro">

        <TextView
            android:id="@+id/txt_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="32sp"
            android:textStyle="bold"
            android:textColor="@color/amarillo"
            android:background="@color/azul_obscuro"
            android:padding="16dp"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <SearchView
            android:id="@+id/searchView"
            android:layout_width="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@android:drawable/editbox_background"
            android:backgroundTint="@color/azul"
            android:iconifiedByDefault="false"
            android:queryHint="Buscar personaje"
            app:layout_constraintTop_toBottomOf="@id/txt_header"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/img1"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/searchView"
            app:srcCompat="@drawable/master_chief" />

        <TextView
            android:id="@+id/txt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jefe_maestro"
            android:layout_marginTop="8dp"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/img1"
            app:layout_constraintStart_toStartOf="@id/img1"
            app:layout_constraintEnd_toEndOf="@id/img1" />

        <Button
            android:id="@+id/btn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seleccionar"
            app:layout_constraintTop_toBottomOf="@id/txt1"
            app:layout_constraintStart_toStartOf="@id/txt1"
            app:layout_constraintEnd_toEndOf="@id/txt1" />

        <ImageView
            android:id="@+id/img2"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@id/btn1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/cortana" />

        <TextView
            android:id="@+id/txt2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cortana"
            android:layout_marginTop="8dp"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/img2"
            app:layout_constraintStart_toStartOf="@id/img2"
            app:layout_constraintEnd_toEndOf="@id/img2" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seleccionar"
            app:layout_constraintTop_toBottomOf="@id/txt2"
            app:layout_constraintStart_toStartOf="@id/txt2"
            app:layout_constraintEnd_toEndOf="@id/txt2" />


        <ImageView
            android:id="@+id/img3"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@id/btn2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/thel_vadamee" />

        <TextView
            android:id="@+id/txt3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thel_vadamee"
            android:layout_marginTop="8dp"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/img3"
            app:layout_constraintStart_toStartOf="@id/img3"
            app:layout_constraintEnd_toEndOf="@id/img3" />

        <Button
            android:id="@+id/btn3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seleccionar"
            app:layout_constraintTop_toBottomOf="@id/txt3"
            app:layout_constraintStart_toStartOf="@id/txt3"
            app:layout_constraintEnd_toEndOf="@id/txt3" />

        <ImageView
            android:id="@+id/img4"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@id/btn3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/spartan_buck" />

        <TextView
            android:id="@+id/txt4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buck"
            android:layout_marginTop="8dp"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/img4"
            app:layout_constraintStart_toStartOf="@id/img4"
            app:layout_constraintEnd_toEndOf="@id/img4" />

        <Button
            android:id="@+id/btn4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seleccionar"
            app:layout_constraintTop_toBottomOf="@id/txt4"
            app:layout_constraintStart_toStartOf="@id/txt4"
            app:layout_constraintEnd_toEndOf="@id/txt4" />

        <ImageView
            android:id="@+id/img5"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@id/btn4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ur_didacta" />

        <TextView
            android:id="@+id/txt5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ur_didacta"
            android:layout_marginTop="8dp"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/img5"
            app:layout_constraintStart_toStartOf="@id/img5"
            app:layout_constraintEnd_toEndOf="@id/img5" />

        <Button
            android:id="@+id/btn5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seleccionar"
            app:layout_constraintTop_toBottomOf="@id/txt5"
            app:layout_constraintStart_toStartOf="@id/txt5"
            app:layout_constraintEnd_toEndOf="@id/txt5" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>